--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,9 @@ jobs:
 
   build-android:
     name: Build Android APK
-    runsstartsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    needs: [test, security]
+    if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
       - name: Checkout code
