--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,6 +151,46 @@ jobs:
           TAG=${GITHUB_REF#refs/tags/v}
           echo "tag=$TAG" >> $GITHUB_OUTPUT
       
+      - name: Build Android APK
+        run: flutter build apk --release --build-name=${{ steps.version.outputs.tag }} --build-number=${{ github.run_number }}
+      
+      - name: Rename APK
+        run: |
+          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/arr-client-v${{ steps.version.outputs.tag }}-android.apk
+      
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-apk
+          path: build/app/outputs/flutter-apk/arr-client-*.apk
+          retention-days: 90
+
+  build-ios:
+    name: Build iOS IPA
+    runs-on: macos-latest
+    needs: [test, security]
+    if: startsWith(github.ref, 'refs/tags/v')
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.38.5'
+          channel: 'stable'
+          cache: true
+      
+      - name: Install dependencies
+        run: flutter pub get
+      
+      - name: Extract version
+        id: version
+        run: |
+          TAG=${GITHUB_REF#refs/tags/v}
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+      
       - name: Build iOS (no code signing)
         run: flutter build ios --release --no-codesign --build-name=${{ steps.version.outputs.tag }} --build-number=${{ github.run_number }}
       
@@ -228,25 +268,6 @@ jobs:
             ./artifacts/*.ipa
           draft: false
           prerelease: false
-      - name: Install dependencies
-        run: flutter pub get
-      
-      - name: Build iOS (no code signing)
-        run: flutter build ios --release --no-codesign
-      
-      - name: Create IPA
-        run: |
-          mkdir -p build/ios/iphoneos/Payload
-          cp -r build/ios/iphoneos/Runner.app build/ios/iphoneos/Payload/
-          cd build/ios/iphoneos
-          zip -r app-release.ipa Payload
-      
-      - name: Upload IPA artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-ipa
-          path: build/ios/iphoneos/app-release.ipa
-          retention-days: 7
 
   build-web:
     name: Build Web
